[tool.poetry]
name = "data-engineer"
version = "0.1.0"
description = ""
authors = ["João Esteves <jvaesteves@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pyspark = "^3.2.1"
findspark = "^2.0.1"

[tool.poetry.dev-dependencies]
ipykernel = "^6.13.1"
notebook = "^6.4.12"
pandas = "^1.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
